test/libyul/yulSyntaxTests/invalid/unicode_comment_direction_override.sol
{
    // pop 1
    // underflow ‬
}
// ----
// ParserError 1856: (19-32): Literal or identifier expected.
